--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "flowbite": "^2.2.0",
@@ -22,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
   },
