--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^2.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
