--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "stripe": "^14.5.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
