--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.10.3",
     "sort-by": "^1.2.0",
     "stripe": "^14.5.0",
     "sweetalert2": "^11.10.1",
